fixed text alignment

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,5 +3,5 @@
 }
 
 .new-episode-container h1{
-
+  text-align: center;
 }
